--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rafsan-ahmed",
-  "description": "Rafsan Portfolio Website First Iteration",
-  "author": "Rafsan Ahmed <rafsanahmed2828@gmail.com>",
+  "name": "jessica-adzoyi",
+  "description": "Jessica Portfolio Website First Iteration",
+  "author": "Jessica Adzoyi <jadzoyi.work@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rafsanahmed28/rafsan"
+    "url": "https://github.com/JESSICA047/"
   },
   "version": "1.0.0",
   "license": "MIT",
