Refactor code structure for improved readability and maintainability

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Jessica Adzoyi Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Gemini_Generated_Image_ohwk82ohwk82ohwk.ico",
       "sizes": "64x64",
       "type": "image/x-icon"
     },
