--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
     "gh-pages": "^6.3.0",
     "prettier": "^3.5.3"
   },
-  "homepage": "https://rafsanahmed.com"
+  "homepage": "https://jessicaadzoyi.dev"
 }
